# In100gram

./: .gitignore  README.md  build.sh  pyproject.toml  render.yaml
in100gram/api/: urls.py  views.py
in100gram/api/templates/documentation/: index.html
in100gram/feed/: models.py  views.py
in100gram/feed/static/css/: post_style.css
in100gram/feed/static/js/: comments.js  main.js
in100gram/feed/templates/feed/: feed.html
in100gram/feed/templates/posts/: post.html
in100gram/feed/templates/user_profile/: user_profile.html
in100gram/in100gram/: settings.py
