[tool.poetry]
name = "in100gram"
version = "0.1.0"
description = ""
authors = ["4eburaWka <prikpasa14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
pillow = "^10.0.0"
django-stdimage = "^6.0.1"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
